# RATE

./: .gitmodules  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci_build.yml
gen_seeds/: CMakeLists.txt  package.xml
gen_seeds/seed/: shapes_rotation_corner_classification.txt
gen_seeds/src/: gen_seeds.cpp
haste_ros/: CMakeLists.txt  package.xml
haste_ros/haste/: CMakeLists.txt
haste_ros/haste/include/haste/: haste_tracker.hpp
haste_ros/haste/include/haste/tracking/: hypothesis_tracker.hpp
haste_ros/launch/: haste.launch  haste_fd_timeslice_sae.launch  haste_with_gen_seeds.launch
haste_ros/src/: haste_ros.cpp
my_events/: CMakeLists.txt  package.xml
my_events/include/my_events/: math_utils.h  ros_utils.h  sae.h  types.h
my_events/launch/: feature_detection.launch
my_events/src/: feature_detection.cpp
tracking_renderer/: CMakeLists.txt  package.xml
tracking_renderer/src/: tracking_renderer.cpp
